2013-04-26  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c:
	  - Whitespace in comments.

2013-02-13  Release Maker <nomail@fluendo.com>

	* configure.ac: Back to TRUNK.

=== release 0.10.5 ===

2013-02-13  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_chain):
	  - Fix warning in 64-bits builds.

2013-02-12  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c:
	(gst_ttml_attribute_parse_time_expression),
	(gst_ttml_attribute_parse):
	  - Avoid using the system's locale with sscanf (fixes
	    parsing fractional time expressions like 4.5s in
	    French or Spanish)

2013-01-18  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_sax_warning),
	(gst_ttmlparse_sax_error):
	  - Fix build when GST DEBUG is disabled.

2013-01-18  Xavi Artigas  <xartigas@fluendo.com>

	* win32/include/config-orig.h:
	  - config.h for Windows.

2013-01-18  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmltype.c: (gst_ttmltype_find):
	  - Fix overzealous detection of ttml files.

2013-01-17  Release Maker <nomail@fluendo.com>

	* configure.ac: Back to TRUNK.

=== release 0.10.4 ===

2013-01-17  Xavi Artigas  <xartigas@fluendo.com>

	* testsuite/ttml-check-ALL.sh:
	* testsuite/ttml-record-ALL-GOLD.sh:
	* testsuite/ttml-record.sh:
	  - Rest of tools to automate unit testing.

2013-01-16  Xavi Artigas  <xartigas@fluendo.com>

	* testsuite/ttml-play.sh:
	* testsuite/ttml-record.sh:
	  - Couple of tools to automate unit testing.

2013-01-16  Xavi Artigas  <xartigas@fluendo.com>

	* testsuite/Animation/Animation001.xml:
	* testsuite/Animation/Animation002.xml:
	* testsuite/Animation/Animation003.xml:
	* testsuite/Animation/Animation004.xml:
	* testsuite/Animation/Animation004b.xml:
	* testsuite/Animation/Animation005.xml:
	* testsuite/Animation/Animation006.xml:
	* testsuite/Animation/Animation007.xml:
	* testsuite/Animation/Animation008.xml:
	* testsuite/Animation/Animation012.xml: